bug fix: cart overflow in mobile screen

--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -10,7 +10,7 @@
 
 .modal {
   position: fixed;
-  top: 10rem;
+  top: 0;
   left: 5%;
   width: 90%;
   background-color: white;
@@ -19,14 +19,6 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   z-index: 30;
   animation: slide-down 300ms ease-out forwards;
-}
-
-@media (min-width: 768px) {
-  .modal {
-    top: 0;
-    width: 40rem;
-    left: calc(50% - 20rem);
-  }
 }
 
 @keyframes slide-down {
